--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.3"
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/uuidv4": "^5.0.0",
+    "express": "^4.17.3",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.0",
+    "uuidv4": "^6.2.13"
   }
 }
