--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/uuidv4": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.0",
     "uuidv4": "^6.2.13"
